batch-files/k8s-windows-configuration/kubernetes-003-deployment-local.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gms-app-local-deployment
  labels:
    app: gms-app-local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gms-app-local
  template:
    metadata:
      labels:
        app: gms-app-local
    spec:
      hostNetwork: true
      containers:
        - name: gms-app-local
          image: gms-app-local:local
          volumeMounts:
            - mountPath: "/usr/share/ssl/"
              name: gms-storage1
            - mountPath: "/usr/share/keystore/"
              name: gms-storage2
            - mountPath: "/usr/share/keystore-temp/"
              name: gms-storage3
          ports:
            - containerPort: 8443
      volumes:
        - name: gms-storage1
          persistentVolumeClaim:
            claimName: gms-keystores-pvc
        - name: gms-storage2
          persistentVolumeClaim:
            claimName: gms-ks-pvc
        - name: gms-storage3
          persistentVolumeClaim:
            claimName: gms-tempks-pvc
