batch-files/k8s-windows-configuration/kubernetes-005-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-outgoing
  namespace: default
spec:
  podSelector: {}  # This applies to all pods in the namespace
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0  # Allows traffic to all IPs
    ports:
    - protocol: TCP
      port: 5432          # Allows traffic on port 80
    - protocol: TCP
      port: 5432         # Allows traffic on port 443
